--- a/sql/sqitch.conf
+++ b/sql/sqitch.conf
@@ -6,3 +6,11 @@
 	# target = db:pg:
 	# registry = sqitch
 	# client = psql
+[target "todo"]
+	uri = db:pg:todo
+[engine "pg"]
+	target = todo
+[deploy]
+	verify = true
+[rebase]
+	verify = true
